--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>环宇咨询管理中心</title>
+<title>环宇咨询管理中心1</title>
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 
